# DoraPy

./: LICENSE  README.md  setup.cfg  setup.py
src/: curve_train.py  mnist_train.py
src/DoraPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dorapy/: __init__.py
src/dorapy/algorithm/: README.md  svd.py
src/dorapy/core/: initializer.py  layer.py  model.py  net.py  optimizer.py
src/dorapy/ml/: bayes.py  decision_tree.py  svm.py
src/dorapy/nn/: layer.py  loss.py  net.py
src/dorapy/utils/: circle.py  data_iterator.py  dataset.py  dateTool.py  dirTool.py  downloader.py  exlTool.py  imgTool.py  listTool.py  math.py  mathTool.py  metric.py  seeder.py  spiderTool.py  structured_param.py  testTool.py  txtTool.py  videoTool.py
tests/: mnist_test.py
tests/models/: mnist-mlp-epoch10.pkl
