[metadata]
name = DoraPy
version = 1.0.0
author = pgCai
author_email = pgcai@tju.edu.cn
description = "Dorapy is a deep learning framework that focuses on data preprocessing.🛸"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CPG123456/DoraPy
project_urls =
    Bug Tracker = https://github.com/CPG123456/DoraPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src